frontend/ins-react-ssr/ins-react-ssr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ins-react-ssr-svc
spec:
  selector:
    app: ins-react-ssr
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
